--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <a href="#" class="brand-logo">B.Chambers</a>
                     <ul id="nav-mobile" class="right hide-on-med-and-down">
                         <li><a href="https://github-college.github.io/web-server-scripting-B-Chambers/" target="_blank">Assinment 1</a></li>
-                        <li><a href="#">P2</a></li>
+                        <li><a href="http://b-chambers.gwiddle.co.uk/P2/getscreen.html">P2</a></li>
                         <li><a href="#">P3</a></li>
                         <li><a href="#">P4</a></li>
                         <li><a href="#">P5</a></li>
